--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,5 +3,6 @@
     <strong>Body:</strong>
     <%= message.body %>
   </p>
+  <%= button_to "Destroy this message", @message, method: :delete %>
 
 </div>
