--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Messages</h1>
+<div id ="new_message">
+  <%= render partial: "messages/form" ,locals: {message: Message.new}%>
+</div>
+
 
 <div id="messages">
   <% @messages.each do |message| %>
