--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: message) do |form| %>
-<%# model: message: new.html.erb의 @message의 객체정보를 변수 message로 넘겨받은것  %>
+<%# model: message->  객체정보를 변수 message로 넘겨받은것  %>
   <% if message.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
