--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this message", @message %> |
+  <%# <% link_to "Show this message", @message %> 
   <%= link_to "Back to messages", messages_path %>
 </div>
